# Typaste

./: .gitignore  AutoType.cpp  AutoType.hpp  CMakeLists.txt  HISTORY.txt  LICENSE.txt  README.md  README.txt  READMEJP.md  READMEJP.txt  Typaste.cpp  Typaste.hpp  Typaste_res.rc  build-bcc55-a.bat  build-bcc55-w.bat  build-bcc55.bat  resource.h  stdafx.hpp  targetver.h
lang/: en_US.rc  ja_JP.rc
